<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/font"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    tools:context=".Input_Asset_Page">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:elevation="8.97dp">

        <RelativeLayout
            android:id="@+id/btn_back"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ph_arrow_left" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/red_hat_display_medium"
            android:gravity="center"
            android:lineSpacingExtra="-3sp"
            android:text="@string/heading_title_input"
            android:textColor="#06122B"
            android:textSize="22sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/fill_this_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/red_hat_display_medium"
        android:gravity="top"
        android:lineSpacingExtra="-3sp"
        android:text="@string/heading_input"
        android:textColor="#06122B"
        android:textSize="28sp" />

    <RelativeLayout
        android:id="@+id/content_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fill_this_f"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp">

        <RelativeLayout
            android:id="@+id/asset_name"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/title_asset_name"
                android:layout_width="78dp"
                android:layout_height="19dp"
                android:fontFamily="@font/red_hat_display_medium"
                android:gravity="top"
                android:text="@string/name_asset"
                android:textColor="#06122B"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/form_asset_name"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/form_input">

                <TextView
                    android:id="@+id/placeholder"
                    android:layout_width="70dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="11dp"
                    android:fontFamily="@font/red_hat_display"
                    android:gravity="top"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/input_name"
                    android:textColor="#818896"
                    android:textSize="14sp"
                    android:translationY="-0.74sp" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_below="@+id/asset_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/title_status"
                android:layout_width="41dp"
                android:layout_height="19dp"
                android:fontFamily="@font/red_hat_display_medium"
                android:gravity="top"
                android:text="@string/status_input"
                android:textColor="#06122B"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/form_select_status"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/form_input">

                <TextView
                    android:id="@+id/select_status"
                    android:layout_width="85dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="11dp"
                    android:fontFamily="@font/red_hat_display"
                    android:gravity="top"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/select_status"
                    android:textColor="#818896"
                    android:textSize="14sp"
                    android:translationY="-0.74sp" />

                <RelativeLayout
                    android:id="@+id/drop_status"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/dropdown"
                    android:clipToOutline="true" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_below="@+id/status"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/title_location"
                android:layout_width="57dp"
                android:layout_height="19dp"
                android:fontFamily="@font/red_hat_display_medium"
                android:gravity="top"
                android:text="@string/location_input"
                android:textColor="#06122B"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/form_select_location"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/form_input">

                <TextView
                    android:id="@+id/select_location"
                    android:layout_width="94dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="11dp"
                    android:fontFamily="@font/red_hat_display"
                    android:gravity="top"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/select_location"
                    android:textColor="#818896"
                    android:textSize="14sp"
                    android:translationY="-0.74sp" />

                <RelativeLayout
                    android:id="@+id/drop_location"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/dropdown"
                    android:clipToOutline="true" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_submit_input"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/button_login">

            <TextView
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/red_hat_display_medium"
                android:gravity="center_horizontal|top"
                android:text="@string/save_update_input"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>