<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_conf"
    android:layout_width="266dp"
    android:layout_height="154dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_gravity="center"
    android:background="@drawable/dialog_confirm"
    android:elevation="6.75dp">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="246dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/title_dialog_confirm"
            android:layout_width="97dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/red_hat_display_medium"
            android:gravity="center|top"
            android:lineSpacingExtra="-1sp"
            android:text="@string/title_dialog_question"
            android:textColor="#06122B"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="246dp"
        android:layout_height="46dp"
        android:layout_below="@id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/content_dialog_confirm"
            android:layout_width="232dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/red_hat_display"
            android:textStyle="normal"
            android:gravity="center|top"
            android:text="@string/content_dialog_question"
            android:textColor="#06122B"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button"
        android:layout_width="246dp"
        android:layout_height="46dp"
        android:layout_below="@id/content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:id="@+id/button_cancel"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="38dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="127dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_cancel">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="44dp"
                android:layout_height="19dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/red_hat_display_medium"
                android:gravity="center"
                android:text="@string/cancel_dialog_question"
                android:textColor="#FF6169"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_confirm"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="127dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_confirm">

            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/red_hat_display_medium"
                android:gravity="center"
                android:text="@string/confirm_dialog_question"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>