<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_marginTop="-10dp"
    android:background="#F9F9F9">

    <RelativeLayout
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:clipToOutline="true"
        android:src="@drawable/login_banner_top" />

    <RelativeLayout
        android:id="@+id/logo_title_"
        android:layout_width="227dp"
        android:layout_height="131dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="51dp"
            android:layout_height="33dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/only_logo_buenno" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/red_hat_display_medium"
            android:text="@string/heading_one"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/heading_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_welcome"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/red_hat_display"
            android:gravity="center"
            android:text="@string/heading_two"
            android:textColor="#ECF3FA"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading_one"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/red_hat_display"
            android:gravity="center"
            android:text="@string/heading_three"
            android:textColor="#ECF3FA"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content_con"
        android:layout_width="328dp"
        android:layout_height="249dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="16dp">

        <RelativeLayout
            android:id="@+id/form_email"
            android:layout_width="308dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/form_input">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/mdi_email_outline" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="48dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:fontFamily="red_hat_display"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="1sp"
                android:hint="@string/form_email"
                android:textColor="#818896"
                android:textSize="14sp" />

        </RelativeLayout>

        <!-- Error Message for Email -->
        <TextView
            android:id="@+id/errorMessageEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_email"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:textColor="#FF0000"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/form_password"
            android:layout_width="308dp"
            android:layout_height="42dp"
            android:layout_below="@id/form_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/form_input">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/mdi_lock_outline" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="48dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:background="@null"
                android:lineSpacingExtra="1sp"
                android:fontFamily="red_hat_display"
                android:hint="@string/form_password"
                android:textColor="#818896"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/eye_pass"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/eye_invisible_filled" />

        </RelativeLayout>

        <!-- Error Message for Password -->
        <TextView
            android:id="@+id/errorMessagePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_password"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:textColor="#FF0000"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/button_login"
            android:layout_width="308dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/button_login">

            <TextView
                android:id="@+id/button"
                android:layout_width="42dp"
                android:layout_height="21dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="133dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="133dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/red_hat_display_medium"
                android:gravity="center"
                android:text="@string/button_login"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>